introduced PortableBase64 in order to be able to work on CP2
Also-by: Jochen Hiller <j.hiller@telekom.de>
Signed-off-by: Miki Jankov <miki.jankov87@gmail.com>